--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
     <body>
         
-        <script src="js/app.js" async defer></script>
+        <script src="js/switch.js" async defer></script>
+        <script src="js/while.js" async defer></script>
+        <script src="js/for.js" async defer></script>
     </body>
 </html>
